# CandyCrunch

./: .gitignore  CandyCrunch.ipynb  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-publish.yml  tests.yml
CandyCrunch/: analysis.py  cli.py  glycans.pkl  multi_file_workflow_utils.py  prediction.py
CandyCrunch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
candycrunch/: __init__.py  analysis.py  cli.py  glycans.pkl  glytoucan_mapping.pkl  model.py  prediction.py
examples/: JC_171002Y1_extracted_spectra.xlsx
tests/: conftest.py  test_CandyCrumbs.py  test_CandyCrunch.py  test_results_log.json
tests/data/GPST000017/: JC_141128PGMa.xlsx  JC_180323Saliva02.xlsx  df_mz_GPST000017.csv
tests/data/GPST000029/: CA_PGMLAD_OG_051017.xlsx  df_mz_GPST000029.csv  df_mz_GPST000029_O_conversion_error.csv  df_mz_GPST000029_O_old.csv
tests/data/GPST000134/: df_mz_GPST000134.csv
tests/data/GPST000307/: TT_200116Hayden_2.xlsx  df_mz_GPST000307.csv
tests/data/GPST000350/: JC_200217P1N_200218002345.csv  JC_200217P1N_200218002345.xlsx  JC_200217P1O.csv  JC_200221P5N.csv  JC_200221P5O.csv  df_mz_GPST000350.csv
tests/data/GPST000487/: df_mz_GPST000487.csv
tests/data/PMC8950484_CHO/: JC_171002Y1.mzML.xlsx  JC_171002Y2.mzML.xlsx  JC_171002Y3.mzML.xlsx  JC_171002Y4.mzML.xlsx  df_mz_PMC8950484_CHO.csv
tests/data/milk/: df_mz_milk.csv
training/: build_training_pickles.py  file_checklist_template.csv  training_script.py  training_utils.py
