[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CandyCrunch"
version = "0.5.3"
description = "Package for predicting glycan structure from LC-MS/MS data"
readme = "README.md"
authors = [
    {name = "Daniel Bojar", email = "daniel.bojar@gu.se"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "glycowork[draw]~=1.5.0",
    "requests",
    "regex",
    "networkx",
    "scipy",
    "torch~=2.1",
    "numpy_indexed",
    "seaborn",
    "pandas",
    "statsmodels",
    "pymzml", 
    "pyteomics",
    "lxml",
    "torchvision",
    "openpyxl",
    "tabulate"
]

[project.urls]
Homepage = "https://github.com/BojarLab/CandyCrunch"

[project.optional-dependencies]
draw = ["glycowork[draw]~=1.5.0"]

[project.scripts]
candycrunch_predict = "CandyCrunch.cli:main"

[tool.setuptools]
include-package-data = true
packages = ["CandyCrunch"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.pkl", "*.jpg", "*.pt"]
