[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candycrunch"
version = "0.6.0"
description = "Package for predicting glycan structure from LC-MS/MS data"
readme = "README.md"
authors = [
    {name = "Daniel Bojar", email = "daniel.bojar@gu.se"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "glycowork~=1.6.1",
    "requests",
    "regex",
    "networkx",
    "scipy",
    "torch~=2.1",
    "numpy_indexed",
    "seaborn",
    "pandas",
    "statsmodels",
    "pymzml", 
    "pyteomics",
    "lxml",
    "torchvision",
    "openpyxl",
    "tabulate",
    "matplotlib",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/BojarLab/CandyCrunch"

[project.scripts]
candycrunch_predict = "candycrunch.cli:main"

[tool.setuptools]
include-package-data = true
packages = ["candycrunch"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.pkl", "*.jpg", "*.pt"]