[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candycrunch"
version = "0.6.1"
description = "Package for predicting glycan structure from LC-MS/MS data"
readme = "README.md"
authors = [
    {name = "Daniel Bojar", email = "daniel.bojar@gu.se"},
]
license = "MIT" 
license-files = ["LICENSE"] 
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "glycowork[ml]~=1.7.0",
    "requests",
    "regex",
    "networkx",
    "scipy",
    "torch~=2.1",
    "torchmetrics",
    "numpy_indexed",
    "seaborn",
    "pandas",
    "statsmodels",
    "pymzml", 
    "pyteomics",
    "lxml",
    "torchvision",
    "openpyxl",
    "tabulate",
    "matplotlib",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/BojarLab/CandyCrunch"

[project.scripts]
candycrunch_predict = "candycrunch.cli:main"

[tool.setuptools]
include-package-data = false
packages = ["candycrunch"]

[tool.setuptools.package-data]
candycrunch = ["*.csv", "*.pkl", "*.jpg", "*.pt"]

[tool.setuptools.exclude-package-data]
"*" = ["tests*", "*.ipynb"]